force-app/main/default/objects/DragDropChildReorderConfig__mdt/DragDropChildReorderConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Drag Drop Child Reorder LWC component. Each record defines a preconfigured parent-child relationship with display and sorting settings.</description>
    <label>Drag Drop Child Reorder Config</label>
    <pluralLabel>Drag Drop Child Reorder Configs</pluralLabel>
</CustomObject>