force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/ChildObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectApiName__c</fullName>
    <description>API name of the child SObject to reorder (e.g. Contact, OrderItem__c).</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>