force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/ChildQueryCondition10__c.field-meta.xml
<CustomField>
    <fullName>ChildQueryCondition10__c</fullName>
    <description>SOQL condition #10 for filtering child records. Reference as 10 in ConditionLogic__c.</description>
    <label>Child Query Condition 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>