force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/ChildQueryCondition1__c.field-meta.xml
<CustomField>
    <fullName>ChildQueryCondition1__c</fullName>
    <description>SOQL condition #1 for filtering child records (e.g. Status__c = &apos;Active&apos;). Reference as 1 in ConditionLogic__c.</description>
    <label>Child Query Condition 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>