force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/ChildQueryCondition2__c.field-meta.xml
<CustomField>
    <fullName>ChildQueryCondition2__c</fullName>
    <description>SOQL condition #2 for filtering child records. Reference as 2 in ConditionLogic__c.</description>
    <label>Child Query Condition 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>