force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/ConditionLogic__c.field-meta.xml
<CustomField>
    <fullName>ConditionLogic__c</fullName>
    <description>Optional logic expression to combine the ChildQueryCondition fields. Use numbers 1-10 to reference each condition. Examples: "1 AND 2", "1 OR 2", "1 AND (3 OR 5 OR 9)". If blank, all non-empty conditions are combined with AND.</description>
    <label>Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>