force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/DisplayFieldApiName2__c.field-meta.xml
<CustomField>
    <fullName>DisplayFieldApiName2__c</fullName>
    <description>Optional second field shown in grey in parentheses next to the main display field in the drag list. Supports dot-notation (e.g. Account.Name, Custom__r.Field__c).</description>
    <label>Display Field API Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>