force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/DisplayFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>DisplayFieldApiName__c</fullName>
    <description>API name of the field (or dot-notation cross-object field) to display as the record title in the drag list. Supports relationship traversal, e.g. Account.Name or CustomObj__r.Label__c.</description>
    <label>Display Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>