force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/ParentObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectApiName__c</fullName>
    <description>API name of the parent SObject (e.g. Account, MyObject__c). Used to match the config to the current record context.</description>
    <label>Parent Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>