force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/RelationshipFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipFieldApiName__c</fullName>
    <description>API name of the lookup/master-detail field on the child object that references the parent (e.g. AccountId, Parent__c).</description>
    <label>Relationship Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>