force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/RelationshipLabel__c.field-meta.xml
<CustomField>
    <fullName>RelationshipLabel__c</fullName>
    <description>Label shown to the user as the relationship title in the component. Overrides the default object label.</description>
    <label>Relationship Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>