force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/SortDirection__c.field-meta.xml
<CustomField>
    <fullName>SortDirection__c</fullName>
    <description>Direction for the initial query ordering: ASC (ascending) or DESC (descending). Defaults to ASC.</description>
    <label>Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>