force-app/main/default/objects/DragDropChildReorderConfig__mdt/fields/SortFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>SortFieldApiName__c</fullName>
    <description>API name of the integer/whole-number field on the child object used as sort order (e.g. Sort_Order__c).</description>
    <label>Sort Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>